--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hhernan6.github.io/personalPortfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,5 +28,6 @@
   ],
   "devDependencies": {
     "gh-pages": "^2.0.1"
+
   }
 }
