--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hhernan6.github.io/personalPortfolio/",
+  "homepage": "http://gitname.github.io/react-gh-pages",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -13,9 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +26,5 @@
   ],
   "devDependencies": {
     "gh-pages": "^2.0.1"
-
   }
 }
