--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-scripts": "2.0.3"
   },
   "scripts": {
+    "build": "webpack --config prod.config.js",
+
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
