--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "elevator.js": "^1.0.1",
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3"
   },
   "scripts": {
-    "build": "webpack --config prod.config.js",
-
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
