--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3"
   },
   "scripts": {
@@ -21,13 +22,13 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+  ]
 }
